feat: add parameters by send version of de ecoomerce db and php in  build

--- a/.env
+++ b/.env
@@ -5,6 +5,16 @@ MARIADB_DATABASE=prestashop
 MYSQL_DATABASE=prestashop
 MYSQL_ROOT_PASSWORD=admin
 MARIADB_ROOT_PASSWORD=admin
+#MARIADB_USER=root
+#MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1
+
+
+#MYSQL_DATABASE=exampledb
+#MYSQL_USER=exampleuser
+#MYSQL_PASSWORD=admin
+#MYSQL_RANDOM_ROOT_PASSWORD='1'
+
+#DB_ECOMMERCE="exampledb"
 
 # VAR PS
 PS_LANGUAGE=es
@@ -21,3 +31,25 @@ DB_SERVER=db_service
 DB_PASSWD=admin
 PS_ERASE_DB=0
 # DB_USER=root
+
+
+#Defualt version
+DEFAULT_PHP_version=7.4
+DEFAULT_Prestashop_version=1.7.8.3
+DEFAULT_MariaDB_version=10.7.8
+
+#Version to build
+PHP_version=7.4
+Wordpress_version=
+Prestashop_version=1.7.8.3
+MYSQL_version=
+MariaDB_version=10.7.8
+
+IMAGE_ECOMMERCE=prestashop/prestashop:1.7.8.3-7.4-apache
+IMAGE_DB=mariadb:10.7.8-focal
+
+CONTAINER_NAME_ECOMMERCE=FPAY_prestashop-1.7.8.3-7.4-10.7.8
+CONTAINER_NAME_DB=FPAY_mariadb-1.7.8.3-7.4-10.7.8
+
+PATH_DATA_ECOMM=prestashop/1.7.8.3-7.4-10.7.8/html_data
+PATH_DATA_DB=mariadb/1.7.8.3-7.4-10.7.8/data
