--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,28 @@
 version: '3'
 services:
   db_service:
-    container_name: fpay_mariadb
+    container_name: "${CONTAINER_NAME_DB}"
     env_file: .env
-    image: mariadb:10.7.8-focal
+    # image: mariadb:10.7.8-focal
+    #image: "mysql:${MYSQL_version}"
+    image: "${IMAGE_DB}"
+
     ports:
       - 3306:3306
     expose:
       - 3306
     volumes:
-      - ./db/mariadb/data:/var/lib/mysql:rw
+      - ./db/${PATH_DATA_DB}:/var/lib/mysql:rw
       - ./db/script.sql:/docker-entrypoint-initdb.d/script.sql:ro
     restart: always
     networks:
-      - prestashop_network_1.7-8.3
+      - fpay_network
   
   web:
-    image: "prestashop/prestashop:1.7.8.3"
-    container_name: fpay_prestashop_1.7-8.3
+    #image: "prestashop/prestashop:${Prestashop_version}-${PHP_version}-apache"
+    image: "${IMAGE_ECOMMERCE}"
+
+    container_name: "${CONTAINER_NAME_ECOMMERCE}"
     environment:
       - PS_LANGUAGE=es
       - PS_INSTALL_AUTO=${PS_INSTALL_AUTO}
@@ -32,10 +37,15 @@ services:
       - DB_SERVER=db_service
       - DB_PASSWD=admin
       - PS_ERASE_DB=0
+
+      - WORDPRESS_DB_HOST=db_service
+      - WORDPRESS_DB_USER=root
+      - WORDPRESS_DB_PASSWORD=admin
+      - WORDPRESS_DB_NAME=prestashop
     ports:
       - "8080:80"
     volumes:
-      - ./prestashop/html_data:/var/www/html/  
+      - ./${PATH_DATA_ECOMM}:/var/www/html/
       #- ./prestashop/log:/var/log:ro
     expose:
       - 8080
@@ -44,8 +54,16 @@ services:
     depends_on:
       - db_service
     networks:
-      - prestashop_network_1.7-8.3
+      - fpay_network
+    # deploy:
+    #   resources:
+    #       limits:
+    #         cpus: 0.50
+    #         memory: 512M
+    #       reservations:
+    #         cpus: 0.25
+    #         memory: 128M
 
 networks:
-  prestashop_network_1.7-8.3:
+  fpay_network:
     driver: bridge
