fix: minor fixes

--- a/.env
+++ b/.env
@@ -40,16 +40,18 @@ MariaDB_DEFAULT_version=10.7.8
 
 #Version to build
 PHP_version=7.4
-Wordpress_version=
-Prestashop_version=1.7.8.3
+Wordpress_version=6
+Prestashop_version=
 MYSQL_version=
 MariaDB_version=10.7.8
 
-IMAGE_ECOMMERCE=prestashop/prestashop:1.7.8.3-7.4-apache
+IMAGE_ECOMMERCE=wordpress:6-php7.4-apache
 IMAGE_DB=mariadb:10.7.8-focal
+PORT_DEFAULT_WEB=8080
+PORT_DEFAULT_DB=3301
 
-CONTAINER_NAME_ECOMMERCE=FPAY_prestashop-1.7.8.3-7.4-10.7.8
-CONTAINER_NAME_DB=FPAY_mariadb-1.7.8.3-7.4-10.7.8
+CONTAINER_NAME_ECOMMERCE=FPAY_wordpress-6-7.4-10.7.8
+CONTAINER_NAME_DB=FPAY_mariadb-6-7.4-10.7.8
 
-PATH_DATA_ECOMM=prestashop/1.7.8.3-7.4-10.7.8/html_data
-PATH_DATA_DB=mariadb/1.7.8.3-7.4-10.7.8/data
+PATH_DATA_ECOMM=wordpress/6-7.4-10.7.8/html_data
+PATH_DATA_DB=mariadb/6-7.4-10.7.8/data
