--- a/example.env
+++ b/example.env
@@ -47,6 +47,8 @@ MariaDB_version=10.7.8
 
 IMAGE_ECOMMERCE=prestashop/prestashop:1.7.8.3-7.4-apache
 IMAGE_DB=mariadb:10.7.8-focal
+PORT_DEFAULT_WEB=8080
+PORT_DEFAULT_DB=3306
 
 CONTAINER_NAME_ECOMMERCE=FPAY_prestashop-1.7.8.3-7.4-10.7.8
 CONTAINER_NAME_DB=FPAY_mariadb-1.7.8.3-7.4-10.7.8
