doc: update doc

--- a/example.env
+++ b/example.env
@@ -1,20 +1,9 @@
-# VAR MYSQL
-# MYSQL_ALLOW_EMPTY_PASSWORD=yes
-# MARIADB_ALLOW_EMPTY_PASSWORD=yes
+
 MARIADB_DATABASE=prestashop
 MYSQL_DATABASE=prestashop
 MYSQL_ROOT_PASSWORD=admin
 MARIADB_ROOT_PASSWORD=admin
-#MARIADB_USER=root
-#MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1
 
-
-#MYSQL_DATABASE=exampledb
-#MYSQL_USER=exampleuser
-#MYSQL_PASSWORD=admin
-#MYSQL_RANDOM_ROOT_PASSWORD='1'
-
-#DB_ECOMMERCE="exampledb"
 
 # VAR PS
 PS_LANGUAGE=es
@@ -29,10 +18,8 @@ DB_NAME=prestashop
 DB_SERVER=db_service
 DB_PASSWD=admin
 PS_ERASE_DB=0
-# DB_USER=root
 
-
-#Defualt version
+#Default version
 PHP_DEFAULT_version=7.4
 Prestashop_DEFAULT_version=1.7.8.3
 MariaDB_DEFAULT_version=10.7.8
