--- a/example.env
+++ b/example.env
@@ -1,9 +1,20 @@
-
+# VAR MYSQL
+# MYSQL_ALLOW_EMPTY_PASSWORD=yes
+# MARIADB_ALLOW_EMPTY_PASSWORD=yes
 MARIADB_DATABASE=prestashop
 MYSQL_DATABASE=prestashop
 MYSQL_ROOT_PASSWORD=admin
 MARIADB_ROOT_PASSWORD=admin
+#MARIADB_USER=root
+#MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=1
 
+
+#MYSQL_DATABASE=exampledb
+#MYSQL_USER=exampleuser
+#MYSQL_PASSWORD=admin
+#MYSQL_RANDOM_ROOT_PASSWORD='1'
+
+#DB_ECOMMERCE="exampledb"
 
 # VAR PS
 PS_LANGUAGE=es
@@ -18,8 +29,10 @@ DB_NAME=prestashop
 DB_SERVER=db_service
 DB_PASSWD=admin
 PS_ERASE_DB=0
+# DB_USER=root
 
-#Default version
+
+#Defualt version
 PHP_DEFAULT_version=7.4
 Prestashop_DEFAULT_version=1.7.8.3
 MariaDB_DEFAULT_version=10.7.8
@@ -41,3 +54,6 @@ CONTAINER_NAME_DB=FPAY_mariadb-1.7.8.3-7.4-10.7.8
 
 PATH_DATA_ECOMM=prestashop/1.7.8.3-7.4-10.7.8/html_data
 PATH_DATA_DB=mariadb/1.7.8.3-7.4-10.7.8/data
+
+UID=1000
+GID=1000
